# ai-tools

./: .atlassian-sync-state.json.backup  .env.example  .gitignore  .sync-state.json  IMPROVEMENTS.md  PROJECT_STRUCTURE.md  README.md  baseline_results.json  batch_analyze.py  cli.py  config.example.yaml  config.observability.example.yaml  debug_action_response.txt  debug_kan2_action.txt  pyproject.toml  pytest.ini  requirements-observability.txt  requirements.txt  run-sync.ps1  run_e2e_tests.py  scheduler.py  test-config.yaml  test_all_commands.bat  test_all_commands.sh  test_analysis_output.md  test_comment_extraction.py  test_confluence_pagination.py  test_debug.py  test_filter_debug.py  test_image_extraction.py  test_improvements.py  test_keyword_extraction.py  test_llm.py  test_llm_connection.py  test_llm_keywords.py  test_local_llm.md  test_long_doc.md  test_retrieval_log.md  test_utils.py
.cache/: knowledge_KAN-13_1.0.0.json  knowledge_KAN-2_1.0.0.json
.claude/: settings.local.json
configs/: doc_analysis_config.yaml
crawler/: __init__.py  analysis_context.py  base_context.py  confluence.py  doc_analyzer.py  doc_splitter.py  document_context.py  error_handler.py  jira.py  jira_analyzer.py  llm_client.py  llm_utils.py  metrics_history.py  pdf_converter.py  prompt_templates.py  reasoning_filter.py  report_analyzer.py  report_context.py  report_generator.py  searcher.py  section_processor.py  storage.py  unified_analyzer.py  wiki_batch_compiler.py  wiki_manager.py
docs/: ANALYZER_ARCHITECTURE_REVIEW.md  ANALYZER_INTEGRATION_OPPORTUNITIES.md  CLI_TESTING.md  (+52 more)
(+169 files in other folders)
