[project]
name = "atlassian-crawler"
version = "0.1.0"
description = "Crawl Jira and Confluence data to local markdown files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "atlassian-python-api>=3.41.0",
    "markdownify>=0.11.6",
    "click>=8.1.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.24.11",
    "pymupdf4llm>=0.0.17",
]

[project.scripts]
atlassian-crawler = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawler"]
